--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,7 +38,7 @@
 .app-block {
   padding: 20px;
   margin: 20px;
-  background-color: #f2f2f2;
+  background-color: #e4e4e4;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
